<resources>
    <string name="app_name">Traffic lights</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="wrongOrderOfLights">Wrong order of lights!</string>
    <string name="ticTacToe">Tic Tac Toe</string>
    <string name="wrongField">Field is being  used</string>
    <string name="reset">Reset</string>
    <string name="playerXWon">Player X won!</string>
    <string name="playerOWon">Player O won!</string>
    <string name="scores">Scores:</string>
    <string name="gameDraw">It\'s a draw</string>
    <string name="CountryConvert">Country Converter</string>
    <string name="PizzaOrder">Pizza Order</string>
    <string name="thick">Thick</string>
    <string name="Thin">Thin</string>
    <string name="Big">Big</string>
    <string name="Middle">Medium</string>
    <string name="Small">Small</string>
    <string name="Cheese">Cheese</string>
    <string name="Ham">Ham</string>
    <string name="Mushrooms">Mushrooms</string>
    <string name="Olives">Olives</string>
    <string name="Bacon">Bacon</string>
    <string name="Chicken">Chicken</string>
    <string name="Onion">Onion</string>
    <string name="Garlic">Garlic</string>
    <string name="Salami">Salami</string>
    <string name="Capers">Capers</string>
    <string name="tuna">Tuna</string>
    <string name="Tomatosouce">Tomato sauce</string>
    <string name="GarlicSauce">Garlic sauce</string>
    <string name="Oregano">Oregano</string>
    <string name="TypeOfDough">Type of dough</string>
    <string name="BasicIngredients">Basic ingredients (min 3)</string>
    <string name="ExtraIngredients">Extra Ingredients (max 2)</string>
    <string name="SizeOfPizza">Size of Pizza</string>
    <string name="Order">Order</string>
    <string name="LimitReached">Limit of extra ingredients reached!</string>
    <string name="Choose3Basic">Choose min 3 basic ingredients</string>
    <string name="YouOrder">You order</string>
    <string name="Pizza" translatable="false">Pizza</string>
    <string name="AndExtra">and extra</string>
    <string name="Price">Price</string>
    <string name="with">with</string>
    <string name="quiz">Quiz - what team is it?</string>
    <string name="Points">Points:</string>
    <string name="YourAnswer">Your answer</string>
    <string name="check">Check</string>
    <string name="goodAnswer">Good answer!</string>
    <string name="badAnswer">Wrong answer. Corect answer  is</string>
    <string name="theEnd">The end. Your points:</string>
</resources>
