<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/quiz"
        android:textColor="#CC2D2D"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:text="@string/Points"
        android:textColor="#2129C1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewUserPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/textViewPoints"
        android:text="0"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/eTAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_above="@id/button"
        android:text=""
        android:hint="@string/YourAnswer"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="60dp"
        app:srcCompat="@drawable/arsenal"
        />


</RelativeLayout>