<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="188dp"
        android:text="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVTrafficLights6"
        android:layout_width="202dp"
        android:layout_height="21dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="200dp"
        android:text="@string/quiz"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnQuiz"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOrderPizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="272dp"
        android:text="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVTrafficLights3"
        android:layout_width="189dp"
        android:layout_height="25dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="356dp"
        android:text="@string/CountryConvert"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnListView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="340dp"
        android:text="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnListView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="432dp"
        android:text="5A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVTrafficLights4"
        android:layout_width="189dp"
        android:layout_height="25dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="448dp"
        android:text="@string/CountryConvert"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnListView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVTrafficLights5"
        android:layout_width="139dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="284dp"
        android:text="@string/PizzaOrder"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnOrderPizza"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTrafficLights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTicTacToe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="108dp"
        android:text="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVTrafficLights2"
        android:layout_width="139dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="120dp"
        android:text="@string/ticTacToe"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnTicTacToe"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVTrafficLights"
        android:layout_width="139dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnTrafficLights"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>